[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/main.gd" type="Script" id=1]
[ext_resource path="res://shaders/crt_shader.shader" type="Shader" id=2]
[ext_resource path="res://src/ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://music/bad_theme.ogg" type="AudioStream" id=7]
[ext_resource path="res://sound/cheers/cheers.ogg" type="AudioStream" id=10]
[ext_resource path="res://sprites/0_text.png" type="Texture" id=11]
[ext_resource path="res://src/paddle.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=3]
resource_name = "New Anim"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:pitch_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.8, 46.5, -0.5, 0, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:pitch_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.96, 1.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:pitch_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 2 )
shader_param/screen_size = Vector2( 256, 256 )
shader_param/show_curvature = true
shader_param/curvature_x_amount = 6.0
shader_param/curvature_y_amount = 4.86
shader_param/corner_color = Color( 0, 0, 0, 1 )
shader_param/show_vignette = false
shader_param/vignette_opacity = 0.2
shader_param/show_horizontal_scan_lines = true
shader_param/horizontal_scan_lines_amount = 180.0
shader_param/horizontal_scan_lines_opacity = 1.0
shader_param/show_vertical_scan_lines = true
shader_param/vertical_scan_lines_amount = 320.0
shader_param/vertical_scan_lines_opacity = 1.0
shader_param/boost = 2.0
shader_param/aberration_amount = 3.14

[node name="main" type="Node2D"]
process_priority = 1
script = ExtResource( 1 )

[node name="paddle" parent="." instance=ExtResource( 12 )]
position = Vector2( 33, 14 )

[node name="ai_paddle" parent="." instance=ExtResource( 12 )]
is_player = false

[node name="ball" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AudioStreamPlayer"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="score_audio_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0
mix_target = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="slow_mode" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.160784, 0.0980392, 0.00784314, 0.545098 )

[node name="crt" type="TextureRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.270588 )
material = SubResource( 9 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 11 )
expand = true
